// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SportsContainer should match the snapshot 1`] = `
<section>
  <h2
    className="Sports-header"
  >
    Sport News
  </h2>
  <div
    className="sports-wrapper Card-wrapper"
  >
    <Card
      key="G72Ngd3k0"
      title="Golden"
    />
    <Card
      key="W21f07gZLd"
      title="Xavier Basketball"
    />
  </div>
</section>
`;

exports[`SportsContainer should render error message if the error is not an empty string and allsports.length === 0 1`] = `
<section>
  <h2
    className="Sports-header"
  >
    Sport News
  </h2>
  <div
    className="sports-wrapper Card-wrapper"
  >
    <div>
      <h2>
        something went wrong
      </h2>
      <Link
        to="/Options"
      >
        Back
      </Link>
    </div>
  </div>
</section>
`;

exports[`SportsContainer should render loading if the component is loading 1`] = `
<section>
  <h2
    className="Sports-header"
  >
    Sport News
  </h2>
  <div
    className="sports-wrapper Card-wrapper"
  >
    <Loading />
  </div>
</section>
`;
